java 9 and gradle 4.1 compatibility